# youtrack-time-tracking

./: Cargo.toml  README.md  config_example.toml  justfile
src/: .gitignore  main.rs  toggl.rs  token.rs.template  youtrack.rs
