[package]
name = "youtrack-time-tracking"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
tokio = { version = "1.38.0", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json"] }

simple_logger = "5.0.0"
serde_json = "1.0.119"
serde = { version = "1.0.203", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
