[package]
name = "youtrack-time-tracking"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

simple_logger = "5.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
log = { version = "0.4", features = [
    "release_max_level_info",
    "max_level_debug",
] }
toml = "0.8"
base64 = "0.22"
futures = "0.3.30"
regex = "1.10.5"
dialoguer = { version = "0.11.0", no-default-features = true }
